--- a/GideonGame/CoreEngine/CoreEngine.csproj
+++ b/GideonGame/CoreEngine/CoreEngine.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GameMaster.cs" />
+    <Compile Include="Objects\GameState.cs" />
     <Compile Include="Objects\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
